log/build_2024-09-25_00-01-59/py_srvcli/stdout_stderr.log
running egg_info
writing ../../build/py_srvcli/py_srvcli.egg-info/PKG-INFO
writing dependency_links to ../../build/py_srvcli/py_srvcli.egg-info/dependency_links.txt
writing entry points to ../../build/py_srvcli/py_srvcli.egg-info/entry_points.txt
writing requirements to ../../build/py_srvcli/py_srvcli.egg-info/requires.txt
writing top-level names to ../../build/py_srvcli/py_srvcli.egg-info/top_level.txt
reading manifest file '../../build/py_srvcli/py_srvcli.egg-info/SOURCES.txt'
adding license file 'LICENSE'
writing manifest file '../../build/py_srvcli/py_srvcli.egg-info/SOURCES.txt'
running build
running build_py
copying py_srvcli/client_member_function.py -> /home/mayo_poyo/ros2_ws2/build/py_srvcli/build/lib/py_srvcli
running install
running install_lib
copying /home/mayo_poyo/ros2_ws2/build/py_srvcli/build/lib/py_srvcli/client_member_function.py -> /home/mayo_poyo/ros2_ws2/install/py_srvcli/lib/python3.12/site-packages/py_srvcli
byte-compiling /home/mayo_poyo/ros2_ws2/install/py_srvcli/lib/python3.12/site-packages/py_srvcli/client_member_function.py to client_member_function.cpython-312.pyc
  File "/home/mayo_poyo/ros2_ws2/install/py_srvcli/lib/python3.12/site-packages/py_srvcli/client_member_function.py", line 25
    	minimal_client.get_logger().info("The result of adding %d + %d is %d" % (int(sys.argv[1]), int(sys.argv[2]), response.sum)
    	                                ^
SyntaxError: '(' was never closed

running install_data
running install_egg_info
removing '/home/mayo_poyo/ros2_ws2/install/py_srvcli/lib/python3.12/site-packages/py_srvcli-0.0.0-py3.12.egg-info' (and everything under it)
Copying ../../build/py_srvcli/py_srvcli.egg-info to /home/mayo_poyo/ros2_ws2/install/py_srvcli/lib/python3.12/site-packages/py_srvcli-0.0.0-py3.12.egg-info
running install_scripts
Installing client script to /home/mayo_poyo/ros2_ws2/install/py_srvcli/lib/py_srvcli
Installing service script to /home/mayo_poyo/ros2_ws2/install/py_srvcli/lib/py_srvcli
writing list of installed files to '/home/mayo_poyo/ros2_ws2/build/py_srvcli/install.log'
